--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-iframe": "^1.8.0",
     "react-owl-carousel": "^2.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-button": "^1.1.2",
     "react-scroll-up": "^1.3.3",
